examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/asc.st
language core;

extend with #type-ascriptions;

fn main(n : Nat) -> Bool {
  return 0 as Nat
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
